feat: :sparkles: se agrega funciones para mostrar pokemones

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="myPikachu">Pikachu</button>
+    <button id="myPokemon">Pokemon</button>
 </body>
 </html>
