--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="myPokemon">Pokemon</button>
+    <!-- <button id="myPokemon">Pokemon</button> -->
+
+    <div class="cajaPokemon">
+
+    </div>
 </body>
 </html>
