feat: :construction: se muestra ventana con las estadisticas

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- <button id="myPokemon">Pokemon</button> -->
 
-    <div class="cajaPokemon">
+    <div class="cajaPokemones">
 
     </div>
 </body>
